# crimea-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  DESIGN.md  Dockerfile  README.md  chainlit.md  chainlit_ru-UA.md  chainlit_uk-UA.md  docker-compose.yml  lapathoniia.project.json  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json  ru-UA.json  uk-UA.json
locales/en/: errors.ftl  injection.ftl  main.ftl  prompts.ftl
locales/ru/: injection.ftl  main.ftl  prompts.ftl
locales/uk/: errors.ftl  injection.ftl  main.ftl  prompts.ftl
migrations/: create_vector_db_by_md.py
public/: app.js
src/abstract/: embed_manager.py  llm_manager.py
src/assets/: .env.example
src/chainlit_app/: init_app.py  main.py  start.py
src/chainlit_app/utils/: models.py  rag_logger.py  utils.py
src/config/: app.py  embed.py  lapathoniia.py  llm.py  llm_fallback.py  server.py
src/core/: callbacks.py  chroma_manager.py  langchain_manager.py
src/migrations/: create_vector_db_by_md.py
src/models/: llm.py
