[project]
name = "crimea-rag"
version = "0.2.0"
description = "Crimea is Ukraine RAG"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
license = "MIT"
dependencies = [
    "chainlit==2.11.1",
    "fluent-manager==1.0.2",
    "langchain-chroma==1.1.0",
    "langchain-core==1.4.0",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.2.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
]
[dependency-groups]
dev = [
    "chromadb==1.5.9",
    "langchain-text-splitters==1.1.2",
    "unstructured==0.22.31",
    "pre_commit",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
