[project]
name = "crimea-rag"
version = "0.4.2"
description = "A minimalist RAG assistant for quick search and answering questions regarding the occupation of Crimea, based on materials from the 'Crimea is Ukraine' website."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
license = "MIT"
dependencies = [
    "chainlit==2.11.1",
    "fluent-manager==1.0.2",
    "langchain-anthropic==1.4.7",
    "langchain-chroma==1.1.0",
    "langchain-core==1.4.8",
    "langchain-google-genai==4.2.5",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.3.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
]
[dependency-groups]
dev = [
    "chromadb==1.5.9",
    "langchain-text-splitters==1.1.2",
    "unstructured==0.23.1",
    "pre_commit",
    "ruff",
]

[project.urls]
"Homepage" = "https://crimea-is-ukraine.org/en/"
"Web Application" = "https://chat.crimea-is-ukraine.org"
"Repository" = "https://github.com/BogdanovychA/crimea-rag"
"Bug Tracker" = "https://github.com/BogdanovychA/crimea-rag/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "preserve"
